styles.css
/* Font Styles */

/* Navbar Styles */
html {
  scroll-padding-top: 70px;
}

nav {
  height: 70px;
}

.nav-link {
  color: #000;
  font-weight: bold;
  transition: transform 0.3s ease, opacity 0.3s ease;
}

.nav-effect:hover {
  transform: scale(1.2);
  text-decoration: underline;
  text-underline-offset: 0.5rem;
  text-decoration-color: #145a32;
}

.nav-btn {
  position: absolute; 
  right: 10px; 
  top: 50%; 
  transform: translateY(-50%);
}

.nav-btn a:hover {
  transform: scale(1.1);
  transition: transform 0.3s ease, opacity 0.3s ease;
}

@media (max-width: 1200px) {
  .nav-link {
    width: 8rem !important;
  }
}

@media (max-width: 992px) {
  .nav-link {
    width: 6rem !important;
  }
}

@media (max-width: 800px) {
  .nav-link {
    width: auto !important;
    margin: 0 5px !important;
  }
}

@media (max-width: 767px) {
  #collapsible-navbar {
    flex-direction: column !important;
    align-items: center !important;
    text-align: center;
  }
  .nav-btn {
    position: relative !important;
    display: inline-block;
    top: auto !important;
    right: auto !important;
    transform: none !important;
    width: 100%;
  }
}

/* Landing Styles */
.floating-span {
  position: absolute;
  top: 50%;
  left: 2%;
  transform: translateY(-50%)
}

@media (max-width: 1400px) {
  .floating-span h1 {
      font-size: 3.5rem !important;
  }
}

@media (max-width: 1200px) {
  .floating-span h1 {
    font-size: 3.5rem !important;
}
}

@media (max-width: 992px) {
  .floating-span h1 {
    font-size: 2.5rem !important;
}
}

@media (max-width: 768px) {
  .floating-span h1 {
    font-size: 2rem !important;
}
}

@media (max-width: 576px) {
  .floating-span {
    position: relative;
    display: block;
    margin-top: 2rem;
    left: auto;
    transform: none;
    text-align: center;
  }
}

/* About Us Styles */
.heading-underline {
  display: inline-block;
  position: relative;
  margin: 0 auto;
  padding-bottom: 16px;
  border-bottom: 1px solid #ddd;
}

/* Menu Styles */
.menu-item {
  overflow: hidden;
}

.menu-effect:hover {
  color: inherit;
  transform: scale(1.2);
  transform-origin: center;
  text-decoration: underline;
  text-underline-offset: 0.5rem;
  text-decoration-color: #145a32;
}

.menu-effect.active {
  border: none;
  box-shadow: 0px 1px 0px white;
}

/* Button Styles */
.btn-gradient {
  background: linear-gradient(to bottom, #198754 90%, #145a32 90%);
  color: white;
  border: none;
  padding: 8px 15px;
}

.book-btn:hover {
  transform: scale(1.2);
  opacity: 0.8;
  transition: transform 0.3s ease, opacity 0.3s ease;
}

/* Book Table Styles */
input:focus,
textarea:focus {
  border-color: black !important;
  box-shadow: none !important;
  outline: none;
}

/* Footer Styles */
#fb-icon:hover {
  transform: scale(1.2);
  opacity: 0.8;
  transition: transform 0.3s ease, opacity 0.3s ease;
}

#ig-icon:hover{
  transform: scale(1.2);
  opacity: 0.8;
  transition: transform 0.3s, opacity 0.3s ease;
}

/* Shared Styles */
p {
  font-size:1.3rem;
  color: grey;
}

